@@ -3,6 +3,10 @@
  */
 package com.muczynski.library.controller;
 
+import com.muczynski.library.dto.AuthorDto;
+import com.muczynski.library.dto.BookDto;
+import com.muczynski.library.dto.PageInfoDto;
+import com.muczynski.library.dto.SearchResponseDto;
 import com.muczynski.library.service.SearchService;
 import io.restassured.module.mockmvc.RestAssuredMockMvc;
 import org.junit.jupiter.api.BeforeEach;
@@ -14,13 +18,14 @@ import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.util.HashMap;
-import java.util.Map;
+import java.util.Collections;
+import java.util.List;
 
 import static io.restassured.module.mockmvc.RestAssuredMockMvc.given;
 import static org.hamcrest.Matchers.*;
 import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.when;
 
 /**
@@ -49,13 +54,16 @@ class SearchControllerTest {
     @Test
     void testSearch_Success() {
         // Arrange
-        Map<String, Object> searchResults = new HashMap<>();
-        searchResults.put("totalResults", 10);
-        searchResults.put("page", 0);
-        searchResults.put("size", 10);
-        searchResults.put("results", java.util.List.of());
+        PageInfoDto bookPage = new PageInfoDto(0, 0, 0, 10);
+        PageInfoDto authorPage = new PageInfoDto(0, 0, 0, 10);
+        SearchResponseDto searchResults = new SearchResponseDto(
+                Collections.emptyList(),
+                Collections.emptyList(),
+                bookPage,
+                authorPage
+        );
 
-        when(searchService.search(anyString(), anyInt(), anyInt())).thenReturn(searchResults);
+        when(searchService.search(anyString(), anyInt(), anyInt(), anyString())).thenReturn(searchResults);
 
         // Act & Assert
         given()
@@ -66,25 +74,29 @@ class SearchControllerTest {
             .get("/api/search")
         .then()
             .statusCode(200)
-            .body("totalResults", equalTo(10))
-            .body("page", equalTo(0))
-            .body("size", equalTo(10));
+            .body("books", hasSize(0))
+            .body("authors", hasSize(0))
+            .body("bookPage.currentPage", equalTo(0))
+            .body("bookPage.pageSize", equalTo(10));
     }
 
     @Test
     void testSearch_WithResults() {
         // Arrange
-        Map<String, Object> book = new HashMap<>();
-        book.put("id", 1);
-        book.put("title", "Test Book");
+        BookDto book = new BookDto();
+        book.setId(1L);
+        book.setTitle("Test Book");
 
-        Map<String, Object> searchResults = new HashMap<>();
-        searchResults.put("totalResults", 1);
-        searchResults.put("page", 0);
-        searchResults.put("size", 10);
-        searchResults.put("results", java.util.List.of(book));
+        PageInfoDto bookPage = new PageInfoDto(1, 1, 0, 10);
+        PageInfoDto authorPage = new PageInfoDto(0, 0, 0, 10);
+        SearchResponseDto searchResults = new SearchResponseDto(
+                List.of(book),
+                Collections.emptyList(),
+                bookPage,
+                authorPage
+        );
 
-        when(searchService.search("Test Book", 0, 10)).thenReturn(searchResults);
+        when(searchService.search(eq("Test Book"), eq(0), eq(10), eq("IN_LIBRARY"))).thenReturn(searchResults);
 
         // Act & Assert
         given()
@@ -95,21 +107,24 @@ class SearchControllerTest {
             .get("/api/search")
         .then()
             .statusCode(200)
-            .body("totalResults", equalTo(1))
-            .body("results", hasSize(1))
-            .body("results[0].title", equalTo("Test Book"));
+            .body("books", hasSize(1))
+            .body("books[0].title", equalTo("Test Book"))
+            .body("bookPage.totalElements", equalTo(1));
     }
 
     @Test
     void testSearch_Pagination() {
         // Test pagination works
-        Map<String, Object> searchResults = new HashMap<>();
-        searchResults.put("totalResults", 100);
-        searchResults.put("page", 2);
-        searchResults.put("size", 20);
-        searchResults.put("results", java.util.List.of());
+        PageInfoDto bookPage = new PageInfoDto(5, 100, 2, 20);
+        PageInfoDto authorPage = new PageInfoDto(0, 0, 2, 20);
+        SearchResponseDto searchResults = new SearchResponseDto(
+                Collections.emptyList(),
+                Collections.emptyList(),
+                bookPage,
+                authorPage
+        );
 
-        when(searchService.search("book", 2, 20)).thenReturn(searchResults);
+        when(searchService.search(eq("book"), eq(2), eq(20), eq("IN_LIBRARY"))).thenReturn(searchResults);
 
         // Act & Assert
         given()
@@ -120,9 +135,9 @@ class SearchControllerTest {
             .get("/api/search")
         .then()
             .statusCode(200)
-            .body("page", equalTo(2))
-            .body("size", equalTo(20))
-            .body("totalResults", equalTo(100));
+            .body("bookPage.currentPage", equalTo(2))
+            .body("bookPage.pageSize", equalTo(20))
+            .body("bookPage.totalElements", equalTo(100));
     }
 
     @Test
@@ -151,14 +166,9 @@ class SearchControllerTest {
 
     @Test
     void testSearch_EmptyQuery() {
-        // Test empty query string
-        Map<String, Object> searchResults = new HashMap<>();
-        searchResults.put("totalResults", 0);
-        searchResults.put("page", 0);
-        searchResults.put("size", 10);
-        searchResults.put("results", java.util.List.of());
-
-        when(searchService.search("", 0, 10)).thenReturn(searchResults);
+        // Test empty query string - should throw IllegalArgumentException
+        when(searchService.search(eq(""), eq(0), eq(10), eq("IN_LIBRARY")))
+                .thenThrow(new IllegalArgumentException("Query cannot be empty"));
 
         // Act & Assert
         given()
@@ -168,14 +178,13 @@ class SearchControllerTest {
         .when()
             .get("/api/search")
         .then()
-            .statusCode(200)
-            .body("totalResults", equalTo(0));
+            .statusCode(500); // Internal Server Error due to IllegalArgumentException
     }
 
     @Test
     void testSearch_ServiceThrowsException() {
         // Arrange - Service throws exception
-        when(searchService.search(anyString(), anyInt(), anyInt()))
+        when(searchService.search(anyString(), anyInt(), anyInt(), anyString()))
                 .thenThrow(new RuntimeException("Database error"));
 
         // Act & Assert
@@ -187,5 +196,84 @@ class SearchControllerTest {
             .get("/api/search")
         .then()
             .statusCode(500); // Internal Server Error
+    }
+
+    @Test
+    void testSearch_WithSearchTypeOnline() {
+        // Arrange
+        PageInfoDto bookPage = new PageInfoDto(1, 1, 0, 10);
+        PageInfoDto authorPage = new PageInfoDto(0, 0, 0, 10);
+        SearchResponseDto searchResults = new SearchResponseDto(
+                Collections.emptyList(),
+                Collections.emptyList(),
+                bookPage,
+                authorPage
+        );
+
+        when(searchService.search(eq("test"), eq(0), eq(10), eq("ONLINE"))).thenReturn(searchResults);
+
+        // Act & Assert
+        given()
+            .param("query", "test")
+            .param("page", 0)
+            .param("size", 10)
+            .param("searchType", "ONLINE")
+        .when()
+            .get("/api/search")
+        .then()
+            .statusCode(200)
+            .body("bookPage.currentPage", equalTo(0));
+    }
+
+    @Test
+    void testSearch_WithSearchTypeAll() {
+        // Arrange
+        PageInfoDto bookPage = new PageInfoDto(1, 1, 0, 10);
+        PageInfoDto authorPage = new PageInfoDto(0, 0, 0, 10);
+        SearchResponseDto searchResults = new SearchResponseDto(
+                Collections.emptyList(),
+                Collections.emptyList(),
+                bookPage,
+                authorPage
+        );
+
+        when(searchService.search(eq("test"), eq(0), eq(10), eq("ALL"))).thenReturn(searchResults);
+
+        // Act & Assert
+        given()
+            .param("query", "test")
+            .param("page", 0)
+            .param("size", 10)
+            .param("searchType", "ALL")
+        .when()
+            .get("/api/search")
+        .then()
+            .statusCode(200)
+            .body("bookPage.currentPage", equalTo(0));
+    }
+
+    @Test
+    void testSearch_DefaultSearchTypeIsInLibrary() {
+        // Arrange - No searchType parameter should default to IN_LIBRARY
+        PageInfoDto bookPage = new PageInfoDto(1, 1, 0, 10);
+        PageInfoDto authorPage = new PageInfoDto(0, 0, 0, 10);
+        SearchResponseDto searchResults = new SearchResponseDto(
+                Collections.emptyList(),
+                Collections.emptyList(),
+                bookPage,
+                authorPage
+        );
+
+        when(searchService.search(eq("test"), eq(0), eq(10), eq("IN_LIBRARY"))).thenReturn(searchResults);
+
+        // Act & Assert - searchType not passed, should use default IN_LIBRARY
+        given()
+            .param("query", "test")
+            .param("page", 0)
+            .param("size", 10)
+        .when()
+            .get("/api/search")
+        .then()
+            .statusCode(200);
     }
 }
